# html_page_loader

./: Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  files_and_dirs.py  html.py  io.py  logger.py  page_loader.py  resources.py  soup_and_html.py  url.py
page_loader/scripts/: loader.py
tests/: test_download.py  test_exceptions.py  test_naming.py
tests/fixtures/: expected.html  script.js  style.css  test.html
